[package]
name = "jetsongpio"
version = "0.1.3"
edition = "2024"
description = "A Rust library for controlling GPIO pins on NVIDIA Jetson devices"
license = "MIT"
repository = "https://github.com/ztgx/jetsongpio-rs"

[[bin]]
name = "jetsongpio"
path = "src/main.rs"
required-features = ["cli"]

[build-dependencies]
chrono = "0.4"
regex = "1"
ureq = "2"

[dependencies]
anyhow = "1.0"
libc = "0.2"
clap = { version = "4.5", features = ["derive"], optional = true }
nix = { version = "0.29", features = ["fs", "ioctl"] }
mio = { version = "1.2.0", features = ["os-poll", "os-ext"] }
regex = "1"

[features]
default = ["cli"]
cli = ["clap"]
